# mlr_rosetta

./: .gitignore  CMakeLists.txt  README.md  cross
examples/: cross.cpp  det.cpp  id.cpp  test.c  test.cpp  vec.cpp
include/mlr/: ari.hpp  buf.hpp  mat.hpp  sgn.hpp  vec.hpp
